--- a/media/pinax/css/tabs.css
+++ b/media/pinax/css/tabs.css
@@ -18,6 +18,7 @@
 	position:relative;
 /*	left:50%;*/
 	text-align:center;
+	z-index:1;
 }
 #boxtab ul li {
 	display:block;
@@ -27,13 +28,14 @@
 	padding:0;
 	position:relative;
 /*	left:5px;*/
-	left:205px;
+	left:214px;
 /*	right:50%;*/
 }
 #boxtab ul#admin {
 	float:right;
 /*	right:10px;*/
-	right:410px;
+	right:428px;
+	z-index:0;
 }
 #boxtab ul li a {
 	display:block;
