--- a/media/pinax/css/topics.css
+++ b/media/pinax/css/topics.css
@@ -1,6 +1,7 @@
 table.topic, table.topics {
 	width: 100%;
 	border-spacing: 0;
+	margin-top:1em;
 /*	table-layout: fixed;*/
 }
 table.topic th, table.topics th {
